--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,7 +62,7 @@
             "ORDERS": "Purchase orders",
             "GIFT": "Gift Card",
             "ANALYTICS": "Analytics",
-            "DASHBOARDS": "Dashboards",
+            "DASHBOARDS": "Dashboard",
             "REPORTS": "Reports"
         },
         "INVENTORY": {
