refactor: refactoring code

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -48,7 +48,7 @@
             "INCOMING": "revenu",
             "AVAILABLE": "Disponible",
             "EDIT": "Modifier la quantité",
-            "SAVE": "Enregistrer"
+            "SAVE": "Save"
         },
         "USER_BOX": {
             "SETT": "Réglages",
