refactor: refactoring code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -52,7 +52,7 @@
         },
         "USER_BOX": {
             "SETT": "Settings",
-            "ACT": "Actions"
+            "LOG": "Logout"
         },
         "SIDE_BAR": {
             "PRODUCTS": "Products",
