--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -52,7 +52,7 @@
         },
         "USER_BOX": {
             "SETT": "Réglages",
-            "ACT": "Actions"
+            "LOG": "Se déconnecter"
         },
         "SIDE_BAR": {
             "PRODUCTS": "Produits",
