refactor: refactoring code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -88,6 +88,11 @@
             "AVAILABLE": "Available",
             "SUBMIT": "Submit",
             "CARD": "Card preview"
+        },
+        "WELCOME": {
+            "YOUR": "Add your products",
+            "GET": "Get closer to your first sale by adding products, or import your existing product inventory.",
+            "ADD": "Add product"
         }
     }
 }
