--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -171,6 +171,50 @@
             "THANK": "Thank you!",
             "ORDER": "You order was successfuly completed.",
             "BACK": "Back to shop"
+        },
+        "DEFAULT_CHECKOUT": {
+            "CART": "Cart",
+            "CHECKOUT": "Checkout",
+            "RET": "Returning customer? ",
+            "CLICK": "Click here",
+            "LOGIN": " to login",
+            "BILL": "Billing Details",
+            "COUNTRY": "Country ",
+            "SELECT": "Select a country",
+            "TUN": "Tunisia",
+            "ALG": "Algeria",
+            "MOR": "Morocco",
+            "LIB": "Libya",
+            "FN": "First Name ",
+            "LN": "Last Name ",
+            "COMPANY": "Company Name ",
+            "ADDRESS": "Address ",
+            "STREET": "Street address",
+            "APA": "Apartment, suite, unit etc. (optional)",
+            "STCO": "State / Country ",
+            "PZ": "Post / Zip ",
+            "EA": "Email Address ",
+            "PHONE": "Phone ",
+            "PHONE_NUM": "Phone Number",
+            "SHIP": "Ship To A Different Address?",
+            "ORDER": "Order Notes",
+            "NOTES": "Write your notes here...",
+            "COUPON": "Coupon Code",
+            "CODE": "Enter your coupon code if you have one",
+            "C_CODE": "Coupon Code",
+            "APPLY": "Apply",
+            "Y_ORDER": "Your Order",
+            "PRODUCT": "Product",
+            "SUB": "Cart Subtotal",
+            "TOTAL": "Order Total",
+            "BANK": "Direct Bank Transfer",
+            "CPAY": "Cheque Payment",
+            "PLACE_OR": "Place order",
+            "PAYPAL": "Paypal",
+            "PAY": "Place Order",
+            "CREAT": "Create an account?",
+            "CR_ACCOUNT": "Create an account by entering the information below. If you are a returning customer please login at the top of the page.",
+            "PASS": "Account Password"
         }
     }
 }
