--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -172,6 +172,52 @@
             "THANK": "Merci!",
             "ORDER": "Votre commande s'est terminée avec succès.",
             "BACK": "Retour à la boutique"
+        },
+        "DEFAULT_CHECKOUT": {
+            "CART": "Panier",
+            "CHECKOUT": "Check-out",
+            "RET": "Déjà client ? ",
+            "CLICK": "Cliquez ici",
+            "LOGIN": " pour vous connecter",
+            "BILL": "Détails de la facturation",
+            "COUNTRY": "Pays ",
+            "SELECT": "Choisissez un pays",
+            "TUN": "Tunisie",
+            "ALG": "Algérie",
+            "MOR": "Maroc",
+            "LIB": "Libye",
+            "FN": "Prénom ",
+            "LN": "Nom ",
+            "COMPANY": "Nom de la compagnie ",
+            "ADDRESS": "Adresse ",
+            "STREET": "Adresse de rue",
+            "APA": "Appartement, suite, unité etc. (facultatif)",
+            "STCO": "État / Pays",
+            "PZ": "Post / Zip ",
+            "EA": "Adresse Email  ",
+            "PHONE": "Téléphone ",
+            "PHONE_NUM": "Numéro de téléphone",
+            "SHIP": "Livrer à une adresse différente?",
+            "ORDER": "Notes d'ordre",
+            "NOTES": "Écrivez vos notes ici ...",
+            "COUPON": "Code promo",
+            "CODE": "Entrez votre code promo si vous en avez un",
+            "C_CODE": "Code promo",
+            "APPLY": "Appliquer",
+            "Y_ORDER": "Votre commande",
+            "PRODUCT": "Produit",
+            "SUB": "Sous-total du panier",
+            "TOTAL": "Total de la commande",
+            "BANK": "Virement bancaire direct",
+
+            "CPAY": "Paiement par chèque",
+            "PLACE_OR": "Passer la commande",
+
+            "PAYPAL": "Paypal",
+            "PAY": "Passer la commande",
+            "CREAT": "Créer un compte?",
+            "CR_ACCOUNT": "Créez un compte en entrant les informations ci-dessous. Si vous êtes un ancien client, veuillez vous connecter en haut de la page.",
+            "PASS": "Mot de passe du compte"
         }
     }
 }
